--- a/views/index.html
+++ b/views/index.html
@@ -4,13 +4,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>DubomBooks</title>
+    
 </head>
 <body>
 
-    
+    <h1>Title</h1>
+    <div id="table"></div>
 
-
-
-    <script src="../public/js/table.js"></script>
+    <script src="./js/table.js"></script>
 </body>
 </html>
