--- a/views/index.html
+++ b/views/index.html
@@ -8,12 +8,25 @@
     
 </head>
 <body>
+    <div class="container">
+        <h1>Title</h1>
+        <div id="table"></div>
+    
 
-    <h1>Title</h1>
-    <div id="table"></div>
-
+        <div class="input-group mb-3">
+            <div class="input-group-prepend">
+                <span class="input-group-text" id="inputGroup-sizing-default">Subtotal</span>
+             </div>
+            <input type="text" class="form-control" aria-label="Default" aria-describedby="inputGroup-sizing-default" readonly= "readonly" id= "subtotal" value= "0.00">
+            <div class="input-group-prepend">
+                <button class="btn btn-outline-secondary" type="button" id= "checkout">Checkout</button>
+            </div>
+        </div>
+    </div>
     <script src="./js/table.js"></script>
+    <script src="https://code.jquery.com/jquery-3.5.1.min.js" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.bundle.min.js"></script>
+    <script src="./js/tablefunctions.js"></script>
 </body>
 </html>
