--- a/views/index.html
+++ b/views/index.html
@@ -1,9 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
+    <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>DubomBooks</title>
+    <link rel="stylesheet" href="css/dubombook.css">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
     
 </head>
@@ -12,10 +13,10 @@
         <h1>Title</h1>
         <div id="table"></div>
     
-
+        
         <div class="input-group mb-3">
             <div class="input-group-prepend">
-                <span class="input-group-text" id="inputGroup-sizing-default">Subtotal</span>
+                <span class="input-group-text" id="inputGroup-sizing-default">Subtotal €</span><span>
              </div>
             <input type="text" class="form-control" aria-label="Default" aria-describedby="inputGroup-sizing-default" readonly= "readonly" id= "subtotal" value= "0.00">
             <div class="input-group-prepend">
