--- a/views/index.html
+++ b/views/index.html
@@ -10,8 +10,34 @@
 </head>
 <body>
     <div class="container">
-        <h1>Title</h1>
+        <h1 class="mt-5">WelcomeDubomBooks </h1>
         <div id="table"></div>
+
+    <!-- Page Content -->
+	<!-- <div class="container">
+		<div class="row">
+			<div class="col-lg-12 text-center">
+				<h1 class="mt-5">Welcome to Dubom Books</h1>
+				<p class="lead">Select your entrees from the menu below</p>
+			</div>
+			<div id="results" class="col-lg-8 order-2 mb-5"></div>
+            <div class="col-lg-4 order-1">
+                <form enctype="application/json" action="/post/json" method="post">
+                    <div class="form-group">
+                        <select class="form-control" name="sec_n">
+                            <option value="0">Action Books</option>
+                            <option value="1">Comedy Books</option>
+                            <option value="2">Horror Books</option>
+                            
+                        </select>
+                        <input class="form-control mt-3" type="text" name="item" placeholder="Item">
+                        <input class="form-control mt-3" type="text" name="price" placeholder="Price">
+                        <button type="submit" class="btn btn-primary btn-block mt-3">Submit</button>
+                    </div>
+                </form>
+            </div>
+		</div>
+	</div> -->
     
         
         <div class="input-group mb-3">
