--- a/views/css/dubombook.css
+++ b/views/css/dubombook.css
@@ -1,6 +1,8 @@
 body {
     font-family: Arial, Helvetica, sans-serif;
-    background-color: #FFFFFF;
+    background-image: url("/img/bookstore.jpg");
+    background-attachment: fixed;
+    background-size: 100%;
     margin: 5px;
     text-align: left;
     color: #523819;
