--- a/views/index.html
+++ b/views/index.html
@@ -4,24 +4,35 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>DubomBooks</title>
-    <link rel="stylesheet" href="css/dubombook.css">
+
+    
+    <link rel="stylesheet" href="css/dubombook.css"> 
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
     
 </head>
 <body>
-    <div class="container">
-        <h1 class="mt-5">WelcomeDubomBooks </h1>
-        <div id="table"></div>
+    <!--- <div class="container">
+        <h1 class="mt-5">Welcome to Dubom Books</h1>
+        <div id="table"></div> -->
 
     <!-- Page Content -->
-	<!-- <div class="container">
+	<div class="container">
 		<div class="row">
 			<div class="col-lg-12 text-center">
-				<h1 class="mt-5">Welcome to Dubom Books</h1>
-				<p class="lead">Select your entrees from the menu below</p>
-			</div>
-			<div id="results" class="col-lg-8 order-2 mb-5"></div>
-            <div class="col-lg-4 order-1">
+                <h1 class="mt-5">Welcome to Dubom Books</h1>
+                <p class="lead">Select your book below and enjoy</p>
+            </div>
+            <div id="table"></div>
+            <div class="input-group mb-3">
+            <div class="input-group-prepend">
+                <span class="input-group-text" id="inputGroup-sizing-default">Subtotal €</span><span>
+             </div>
+            <input type="text" class="form-control" aria-label="Default" aria-describedby="inputGroup-sizing-default" readonly= "readonly" id= "subtotal" value= "0.00">
+            <div class="input-group-prepend">
+                <button class="btn btn-outline-secondary" type="button" id= "checkout">Checkout</button>
+            </div>
+        </div>
+			<div class="col-lg-4 order-1">
                 <form enctype="application/json" action="/post/json" method="post">
                     <div class="form-group">
                         <select class="form-control" name="sec_n">
@@ -37,23 +48,14 @@
                 </form>
             </div>
 		</div>
-	</div> -->
-    
-        
-        <div class="input-group mb-3">
-            <div class="input-group-prepend">
-                <span class="input-group-text" id="inputGroup-sizing-default">Subtotal €</span><span>
-             </div>
-            <input type="text" class="form-control" aria-label="Default" aria-describedby="inputGroup-sizing-default" readonly= "readonly" id= "subtotal" value= "0.00">
-            <div class="input-group-prepend">
-                <button class="btn btn-outline-secondary" type="button" id= "checkout">Checkout</button>
-            </div>
-        </div>
+    <footer class="footer">
+        <div class="container text-center"><span class="text-muted">&copy; 2020</span></div>
+    </footer>
     </div>
     <script src="./js/table.js"></script>
     <script src="https://code.jquery.com/jquery-3.5.1.min.js" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.bundle.min.js"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.bundle.min.js"></script> 
     <script src="./js/tablefunctions.js"></script>
 </body>
 </html>
