--- a/views/index.html
+++ b/views/index.html
@@ -3,26 +3,22 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>DubomBooks</title>
-
-    
-    <link rel="stylesheet" href="css/dubombook.css"> 
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
-    
+    <link rel="stylesheet" href="css/dubombook.css">
+    <title>DubomBooks</title>
+   
 </head>
 <body>
-    <!--- <div class="container">
-        <h1 class="mt-5">Welcome to Dubom Books</h1>
-        <div id="table"></div> -->
-
+    
     <!-- Page Content -->
 	<div class="container">
 		<div class="row">
 			<div class="col-lg-12 text-center">
                 <h1 class="mt-5">Welcome to Dubom Books</h1>
                 <p class="lead">Select your book below and enjoy</p>
+                <div id="table" class="table-hover"></div>
             </div>
-            <div id="table"></div>
+            <!-- <div id="table" class="table-hover"></div> -->
             <div class="input-group mb-3">
             <div class="input-group-prepend">
                 <span class="input-group-text" id="inputGroup-sizing-default">Subtotal €</span><span>
