--- a/views/index.html
+++ b/views/index.html
@@ -15,19 +15,19 @@
 		<div class="row">
 			<div class="col-lg-12 text-center">
                 <h1 class="mt-5">Welcome to Dubom Books</h1>
-                <p class="lead">Select your book below and enjoy</p>
-                <div id="table" class="table-hover"></div>
+                <p>Select your book below and enjoy</p>
+                <div id="table" class="table-hover text-left"></div>
             </div>
-            <!-- <div id="table" class="table-hover"></div> -->
             <div class="input-group mb-3">
             <div class="input-group-prepend">
-                <span class="input-group-text" id="inputGroup-sizing-default">Subtotal €</span><span>
+                <span class="input-group-text" id="inputGroup-sizing-default">Subtotal €</span>
              </div>
             <input type="text" class="form-control" aria-label="Default" aria-describedby="inputGroup-sizing-default" readonly= "readonly" id= "subtotal" value= "0.00">
             <div class="input-group-prepend">
                 <button class="btn btn-outline-secondary" type="button" id= "checkout">Checkout</button>
             </div>
         </div>
+            <!--Add new book-->
 			<div class="col-lg-4 order-1">
                 <form enctype="application/json" action="/post/json" method="post">
                     <div class="form-group">
@@ -37,7 +37,9 @@
                             <option value="2">Horror Books</option>
                             
                         </select>
-                        <input class="form-control mt-3" type="text" name="item" placeholder="Item">
+                        <input class="form-control mt-3" type="text" name="title" placeholder="title">
+                        <input class="form-control mt-3" type="text" name="author" placeholder="author">
+                        <input class="form-control mt-3" type="text" name="publisher" placeholder="publisher">
                         <input class="form-control mt-3" type="text" name="price" placeholder="Price">
                         <button type="submit" class="btn btn-primary btn-block mt-3">Submit</button>
                     </div>
@@ -45,7 +47,7 @@
             </div>
 		</div>
     <footer class="footer">
-        <div class="container text-center"><span class="text-muted">&copy; 2020</span></div>
+        <div class="container text-center"><span class="text-muted">&copy; 2021</span></div>
     </footer>
     </div>
     <script src="./js/table.js"></script>
