--- a/views/index.html
+++ b/views/index.html
@@ -18,7 +18,7 @@
                 <p>Select your book below and enjoy</p>
                 <div id="table" class="table-hover text-left"></div>
             </div>
-            <div class="input-group mb-3">
+            <div class="input-group mb-2 mt-2">
             <div class="input-group-prepend">
                 <span class="input-group-text" id="inputGroup-sizing-default">Subtotal €</span>
              </div>
@@ -44,6 +44,8 @@
                         <button type="submit" class="btn btn-primary btn-block mt-3">Submit</button>
                     </div>
                 </form>
+                <!-- Delete button -->
+                <button id="delete" class="btn btn-danger btn-block mt-3">Delete</button>
             </div>
 		</div>
     <footer class="footer">
