--- a/views/index.html
+++ b/views/index.html
@@ -14,16 +14,18 @@
 	<div class="container">
 		<div class="row">
 			<div class="col-lg-12 text-center">
-                <h1 class="mt-5">Welcome to Dubom Books</h1>
-                <p>Select your book below and enjoy</p>
+                <div class="container1">
+                    <h1 class="mt-5">Welcome to Dubom Books</h1>
+                    <p>Select your book below and enjoy</p>
+                </div>
                 <div id="table" class="table-hover text-left"></div>
             </div>
-            <div class="input-group mb-2 mt-2">
+            <div class="input-group mb-2 mt-2 col-lg-12">
             <div class="input-group-prepend">
                 <span class="input-group-text" id="inputGroup-sizing-default">Subtotal €</span>
              </div>
             <input type="text" class="form-control" aria-label="Default" aria-describedby="inputGroup-sizing-default" readonly= "readonly" id= "subtotal" value= "0.00">
-            <div class="input-group-prepend">
+            <div class="input-group-prepend col-lg-1">
                 <button class="btn btn-outline-secondary" type="button" id= "checkout">Checkout</button>
             </div>
         </div>
@@ -37,23 +39,25 @@
                             <option value="2">Horror Books</option>
                             
                         </select>
-                        <input class="form-control mt-3" type="text" name="title" placeholder="title">
-                        <input class="form-control mt-3" type="text" name="author" placeholder="author">
-                        <input class="form-control mt-3" type="text" name="publisher" placeholder="publisher">
-                        <input class="form-control mt-3" type="text" name="price" placeholder="Price">
-                        <button type="submit" class="btn btn-primary btn-block mt-3">Submit</button>
+                        <input class="form-control mt-2" type="text" name="title" placeholder="Title">
+                        <input class="form-control mt-2" type="text" name="author" placeholder="Author">
+                        <input class="form-control mt-2" type="text" name="publisher" placeholder="Publisher">
+                        <input class="form-control mt-2" type="text" name="price" placeholder="Price">
+                        <button type="submit" class="btn2 btn-primary btn-block mt-3">Submit</button>
                     </div>
                 </form>
                 <!-- Delete button -->
-                <button id="delete" class="btn btn-danger btn-block mt-3">Delete</button>
+                <button id="delete" class="btn1 btn-danger btn-block mt-3">Delete</button>
             </div>
 		</div>
     <footer class="footer">
-        <div class="container text-center"><span class="text-muted">&copy; 2021</span></div>
+        <div class="container text-center"><span class="text-muted">&copy; 2021 DubomBooks</span></div>
     </footer>
     </div>
-    <script src="./js/table.js"></script>
+    
     <script src="https://code.jquery.com/jquery-3.5.1.min.js" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.map"></script>
+    <script src="./js/table.js"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.bundle.min.js"></script> 
     <script src="./js/tablefunctions.js"></script>
