--- a/views/index.html
+++ b/views/index.html
@@ -14,11 +14,11 @@
 	<div class="container">
 		<div class="row">
 			<div class="col-lg-12 text-center">
-                <div class="container1">
+                <div class="container1"> 
                     <h1 class="mt-5">Welcome to Dubom Books</h1>
                     <p>Select your book below and enjoy</p>
-                </div>
-                <div id="table" class="table-hover text-left"></div>
+                </div> 
+                <div id="table" class="container3 table-hover text-left"></div>
             </div>
             <div class="input-group mb-2 mt-2 col-lg-12">
             <div class="input-group-prepend">
@@ -30,7 +30,7 @@
             </div>
         </div>
             <!--Add new book-->
-			<div class="col-lg-4 order-1">
+			<div class="container2 col-lg-4 order-1">
                 <form enctype="application/json" action="/post/json" method="post">
                     <div class="form-group">
                         <select class="form-control" name="sec_n">
