--- a/views/css/dubombook.css
+++ b/views/css/dubombook.css
@@ -1,25 +1,43 @@
 body {
     font-family: Arial, Helvetica, sans-serif;
-    background-image: url("/img/bookstore.jpg");
+    background-image: url("/img/Apple-Boobookshop.png");
     background-attachment: fixed;
-    background-size: 100%;
+    background-attachment: no-repeat;
+    background-size: cover;
     margin: 5px;
     text-align: left;
-    color: #523819;
+    
 }
 .container1{
-    background-color: whitesmoke;
-    opacity: 0.80;
+    background-color: rgb(253, 252, 253);
+    opacity: 0.95;
+    width: 101%;
+}
+.container2{
+    background-color: rgb(253, 252, 253);
+    margin-top: 1%;
+    margin-bottom: 1%;
+    opacity: 0.95;
+    padding: 1%;
+}
+.container3{
+    background-color: rgb(253, 252, 253);
+    margin-top: 1%;
+    margin-bottom: 1%;
+    opacity: 0.95;
+    padding: 0% 2% 2% 2%;
+    width: 101%;
 }
 h1{
-    color: rgb(65, 17, 17);
+    color: rgb(17, 65, 33);
     font-size: 80px;
     font-weight: bold;
 }
 p{
-    color:rgb(15, 1, 1);
+    color:rgb(0, 0, 0);
     font-size: 30px;
     font-weight: bold;
+    margin-bottom: 0%;
     
 }
 .btn{
@@ -44,8 +62,9 @@ table {
     border-color: #000000;
     border-width: thin;
     border-collapse: collapse;
-    opacity: 0.80;
+    opacity: 0.90;
     width: 101%;
+    margin-top: -1%;
 }
 th {
     border-color: #000000;
@@ -58,5 +77,8 @@ td {
     font-size: 100%;
     color: rgb(22, 18, 18);
     padding: 5px;
+}
+.footer{
+    background-color: rgb(43, 36, 36);
 }
 
