--- a/views/css/dubombook.css
+++ b/views/css/dubombook.css
@@ -17,6 +17,7 @@ body {
     background-color: rgb(253, 252, 253);
     margin-top: 1%;
     margin-bottom: 1%;
+    border-radius: 5px;
     opacity: 0.95;
     padding: 1%;
 }
@@ -25,6 +26,7 @@ body {
     margin-top: 1%;
     margin-bottom: 1%;
     opacity: 0.95;
+    border-radius: 5px;
     padding: 0% 2% 2% 2%;
     width: 101%;
 }
@@ -57,16 +59,21 @@ p{
     border-radius: 5px;
     height: 35px;
 }
-table {
+#table {
     background-color: rgb(253, 252, 253);
     border-color: #000000;
+    color: #000000;
     border-width: thin;
     border-collapse: collapse;
-    opacity: 0.90;
+    border-radius: 5px;
+    opacity: 0.95;
+    margin-top: 0%;
+}
+table{
     width: 101%;
-    margin-top: -1%;
 }
 th {
+    text-align: center;
     border-color: #000000;
     font-size: 120%;
     color: black;
@@ -78,7 +85,11 @@ td {
     color: rgb(22, 18, 18);
     padding: 5px;
 }
-.footer{
+.selected {
+    background-color: #fba0bf;
+}
+footer{
     background-color: rgb(43, 36, 36);
+    
 }
 
