--- a/views/index.html
+++ b/views/index.html
@@ -1,43 +1,44 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
     <link rel="stylesheet" href="css/dubombook.css">
     <title>DubomBooks</title>
-   
 </head>
+
 <body>
-    
+
     <!-- Page Content -->
-	<div class="container">
-		<div class="row">
-			<div class="col-lg-12 text-center">
-                <div class="container1"> 
+    <div class="container">
+        <div class="row">
+            <div class="col-lg-12 text-center">
+                <div class="container1">
                     <h1 class="mt-5">Welcome to Dubom Books</h1>
                     <p>Select your book below and enjoy</p>
-                </div> 
+                </div>
                 <div id="table" class="container3 table-hover text-left"></div>
             </div>
             <div class="input-group mb-2 mt-2 col-lg-12">
-            <div class="input-group-prepend">
-                <span class="input-group-text" id="inputGroup-sizing-default">Subtotal €</span>
-             </div>
-            <input type="text" class="form-control" aria-label="Default" aria-describedby="inputGroup-sizing-default" readonly= "readonly" id= "subtotal" value= "0.00">
-            <div class="input-group-prepend col-lg-1">
-                <button class="btn btn-outline-secondary" type="button" id= "checkout">Checkout</button>
+                <div class="input-group-prepend">
+                    <span class="input-group-text" id="inputGroup-sizing-default">Subtotal €</span>
+                </div>
+                <input type="text" class="form-control" aria-label="Default"
+                    aria-describedby="inputGroup-sizing-default" readonly="readonly" id="subtotal" value="0.00">
+                <div class="input-group-prepend col-lg-1">
+                    <button class="btn btn-outline-secondary" type="button" id="checkout">Checkout</button>
+                </div>
             </div>
-        </div>
             <!--Add new book-->
-			<div class="container2 col-lg-4 order-1">
+            <div class="container2 col-lg-4 order-1">
                 <form enctype="application/json" action="/post/json" method="post">
                     <div class="form-group">
                         <select class="form-control" name="sec_n">
                             <option value="0">Action Books</option>
                             <option value="1">Comedy Books</option>
                             <option value="2">Horror Books</option>
-                            
                         </select>
                         <input class="form-control mt-2" type="text" name="title" placeholder="Title">
                         <input class="form-control mt-2" type="text" name="author" placeholder="Author">
@@ -49,17 +50,18 @@
                 <!-- Delete button -->
                 <button id="delete" class="btn1 btn-danger btn-block mt-3">Delete</button>
             </div>
-		</div>
+        </div>
     </div>
     <footer class="footer">
         <div class="container text-center"><span class="text-muted">&copy; 2021 DubomBooks</span></div>
     </footer>
-    
-    <script src="https://code.jquery.com/jquery-3.5.1.min.js" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
+    <script src="https://code.jquery.com/jquery-3.5.1.min.js"
+        integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.map"></script>
     <script src="./js/table.js"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.bundle.min.js"></script> 
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.bundle.min.js"></script>
     <script src="./js/tablefunctions.js"></script>
 </body>
+
 </html>
